docs/4.0/field-wrappers.md
---
feedbackId: 1273
---

# Field wrappers

Each field display in your Avo resource has a field wrapper that helps display it in a cohesive way across the whole app.
This not only helps with a unitary design, but also with styling in a future theming feature.

:::info
You'll probably never have to use these components and helpers by themselves, but we'd like to document how they work as a future reference for everyone.
:::

# Index field wrapper

<Image src="/assets/img/4_0/field-wrappers/index_field_wrapper.webp" dark-src="/assets/img/4_0/field-wrappers/index_field_wrapper-dark.webp" width="2824" height="664" alt="Index field wrapper" />

Each field displayed on the <Index /> view is wrapped in this component that regulates the way content is displayed and makes it easy to control some options.

You may use the component `Avo::Index::FieldWrapperComponent` or the helper `index_field_wrapper`.

<Option name="`dash_if_blank`">

Controls whether a dash `—` is rendered instead of the block's content.

Avo decides this by checking `@field.value.blank?` — **not** whether the block passed to `index_field_wrapper` actually renders something. In the example below, we'd like to show a red cross icon instead of a dash even when `@field.value` is `nil`, so we pass `dash_if_blank: false`.

#### Default value

`true`

```erb
<%= index_field_wrapper **field_wrapper_args, dash_if_blank: false do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```

:::warning
Because the check runs against `@field.value` and not the block's rendered output, a block that renders real content is still discarded in favor of the dash whenever `@field.value` is blank. If you're building a custom field whose block can render meaningful content even when `@field.value` is blank, pass `dash_if_blank: false` explicitly, or your content will never show up.
:::

</Option>

<Option name="`center_content`">

Wraps the content in a container with `flex items-center justify-center` classes making everything centered horizontally and vertically.

#### Default value

`false`

```erb
<%= index_field_wrapper **field_wrapper_args, center_content: true do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`flush`">

Removes the padding around the field allowing it to flow from edge to edge.

#### Default value

`false`

```erb
<%= index_field_wrapper **field_wrapper_args, flush: false do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`field`">

The instance of the field. It's usually passed in with the `field_wrapper_args`.

```erb
<%= index_field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`resource`">

The instance of the resource. It's usually passed in with the `field_wrapper_args`.

```erb
<%= index_field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

# Show & Edit field wrapper

<Image src="/assets/img/4_0/field-wrappers/show_field_wrapper.webp" dark-src="/assets/img/4_0/field-wrappers/show_field_wrapper-dark.webp" width="1960" height="450" alt="Show field wrapper" />
<Image src="/assets/img/4_0/field-wrappers/edit_field_wrapper.webp" dark-src="/assets/img/4_0/field-wrappers/edit_field_wrapper-dark.webp" width="1960" height="352" alt="Edit field wrapper" />

The <Show /> and <Edit /> field wrappers are actually the same component.

You may use the component `Avo::Index::FieldWrapperComponent` or the helper `field_wrapper`.

## Field wrapper areas


Each field wrapper is divided in three areas.

### Label

This is where the field name is being displayed. This is also where the [required](./field-options-api#required) asterisk is added for required fields.

### Value

This area holds the actual value of the field or it's representation. The falue can be simple text or more advanced types like images, advanced pickers, and content editors.

At the bottom the [help text](./field-options-api#help) is going to be shown on the <Edit /> view and below it the validation error.

### Extra

This space is rarely used and it's there just to fill some horizontal space so the content doesn't span to the whole width and maintain its readability. With the introduction of the sidebar, this space will be ignored

## Options

<Option name="`dash_if_blank`">

Controls whether a dash `—` is rendered instead of the block's content.

Avo decides this by checking `@field.value.blank?` — **not** whether the block passed to `field_wrapper` actually renders something. In the example below, we'd like to show a red cross icon instead of a dash even when `@field.value` is `nil`, so we pass `dash_if_blank: false`.

#### Default value

`true`

```erb
<%= field_wrapper **field_wrapper_args, dash_if_blank: false do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```

:::warning
Because the check runs against `@field.value` and not the block's rendered output, a block that renders real content is still discarded in favor of the dash whenever `@field.value` is blank. If you're building a custom field whose block can render meaningful content even when `@field.value` is blank, pass `dash_if_blank: false` explicitly, or your content will never show up.
:::

</Option>

<Option name="`compact`">

This renders the field in a more compact way by removing the **Extra** area and decresing the width of the **Label** and **Content** areas.

This is enabled on the fields displayed in actions.

#### Default value

`false`

```erb
<%= field_wrapper **field_wrapper_args, compact: true do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`data`">

Pass in some data attributes. Perhaps you would like to attach a StimulusJS controller to this field.

```erb
<%= field_wrapper **field_wrapper_args, data: {controller: "boolean-check"} do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`full_width`">

This removes the **Extra** area and renders the **Value** area full width.

This is used on fields that require a larger area to be displayed like [WYSIWYG editors](./fields/trix), [`KeyValue`](./fields/key_value), or [file fields](./fields/files).

#### Default value

`false`

```erb
<%= field_wrapper **field_wrapper_args, full_width: true do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`form`">

The instance of the form that is going to be populated. It's usually passed in with the `field_wrapper_args` on the <Edit /> view.

```erb
<%= field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`field`">

The instance of the field. It's usually passed in with the `field_wrapper_args`.

```erb
<%= field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`help`">

The text that is going to be displayed below the actual field on the <Edit /> view.

```erb
<%= field_wrapper **field_wrapper_args, help: "Specify if the post is published or not." do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`label`">

The text that is going to be displayed in the **Label** area. You might want to override it.

```erb
<%= field_wrapper **field_wrapper_args, label: "Post is published" do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`resource`">

The instance of the resource. It's usually passed in with the `field_wrapper_args`.

```erb
<%= field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`stacked`">

Display the field in a column layout with the label on top of the value

```erb
<%= field_wrapper **field_wrapper_args, style: "background: red" do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Image src="/assets/img/4_0/field-wrappers/stacked_field.webp" dark-src="/assets/img/4_0/field-wrappers/stacked_field-dark.webp" width="1520" height="236" alt="A stacked field: the label is displayed above the input" />


<Option name="`style`">

The you might want to pass some styles to the wrapper to change it's looks.

```erb
<%= field_wrapper **field_wrapper_args, style: "background: red" do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>

<Option name="`view`">

The view where the field is diplayed so it knows if it's a <Show /> or <Edit /> view. It's usually passed in with the `field_wrapper_args`.

```erb
<%= field_wrapper **field_wrapper_args do %>
  <%= render Avo::Fields::Common::BooleanCheckComponent.new checked: @field.value %>
<% end %>
```
</Option>
